--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Bishal, and this is my first webapp.
+            <h4> A new Heading </h4>
+            Now I made the changes locally.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
