--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -9,7 +9,7 @@
             max-width: 800px;
             margin: 0 auto;
             color: grey;
-            font-family: sans-sherif;
+            font-family: comic sans ms;
         }
     </style>
     </head>
