--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -8,8 +8,8 @@
         .container{
             max-width: 800px;
             margin: 0 auto;
-            color: grey;
-            font-family: comic sans ms;
+            color: green;
+            font-family: sans-sherif;
         }
     </style>
     </head>
