--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -10,6 +10,7 @@
             margin: 0 auto;
             color: green;
             font-family: sans-sherif;
+            padding-top: 60px;
         }
     </style>
     </head>
