--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -11,6 +11,8 @@
             color: green;
             font-family: sans-sherif;
             padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
     </style>
     </head>
