[imad-console] Updates ui/Article-one.html

--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -4,9 +4,7 @@
             Article One | Bishal Mondal
         </title>
     
-    <style>
-        
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
