--- a/ui/Article-one.html
+++ b/ui/Article-one.html
@@ -20,7 +20,8 @@
             
             <div>
                 <p>August 13, 2017</p>
-                
+            </div>
+            <div>
                 <p>
                     This is article one. This is article one. This is article one. This is article one. This is article one.This is article one.This is article one.This is article one.
                 </p>
