--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,10 @@
             <h4> A new Heading </h4>
             Now I made the changes locally.
         </div>
+        
+        <script>
+            alert("Hi, I am javascript");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
