[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,21 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/897905854506082304/l3SOj3FN_400x400.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Bishal, and this is my first webapp.
-            <h4> A new Heading </h4>
-            Now I made the changes locally.
+        <div>
+            Hi, my name is Bishal Mondal
         </div>
-        
+        <hr/>
+        <h3>Student</h3>
+        <div>
+            I am a student of 3rd year CSE
+        </div>
+        <hr/>
+        <div class = "footer">
+        </div>
         <script>
             alert("Hi, I am javascript");
         </script>
