[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div class="center">
+        <div class="center">
             <img id='madi' src="https://pbs.twimg.com/profile_images/897905854506082304/l3SOj3FN_400x400.jpg" class="img-medium"/>
         </div>
         <hr/>
@@ -25,5 +26,6 @@
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        </div>
     </body>
 </html>
