--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,8 @@
         </div>
         <hr/>
         <div class = "footer">
-            This button <button id='counter'>Click Me!</button> has been clicked<span id='count'> 0 </span>times
+            This button <button id='counter'>Click Me!</button> has been clicked<span id='count'>  </span>times
         </div>
-        <script>
-            alert("Hi, I am javascript");
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
         </div>
