--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         </div>
         <hr/>
         <input type="text" id="name" placeholder="name"></input>
-        <input type+"submit" value="Submit"></input>
+        <input type="submit" value="Submit"></input>
         <ul>
             <li>Name1</li>
             <li>Name2</li>
