--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,8 @@
         </div>
         <hr/>
         <input type="text" id="name" placeholder="name"></input>
-        <input type="submit" value="Submit"></input>
-        <ul>
+        <input type="submit" value="Submit" id="submit_bttn"></input>
+        <ul id='name_list'>
             <li>Name1</li>
             <li>Name2</li>
             <li>Name3</li>
